@@ -2,6 +2,7 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 ==12/28/2012==
 Derision: RoF: Found GM and PVP flags in PP.
+Derision: RoF: Found endurance in PP.
 
 ==12/27/2012==
 Sorvani: Removed #PRAGMA statements around OP_CharacterCreate from patch files now that real problem with RuleI is resolved.
